--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,14 +21,15 @@ security:
         ROLE_SUPER_ADMIN: [ ROLE_BOSS_ADMIN,ROLE_CUSTOM, ROLE_NORMAL_ADMIN, ROLE_ACCOUNTANT ]
     
     access_control:
-        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/logout$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/invoice$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/order$, roles: ROLE_NORMAL_ADMIN }
-        - { path: ^/goodsPassport$, roles:ROLE_NORMAL_ADMIN}
-        - { path: ^/store$, roles: ROLE_NORMAL_ADMIN }
-        - { path: ^/user$, roles: ROLE_NORMAL_ADMIN }
-        - { path: ^/backend$, roles: ROLE_NORMAL_ADMIN }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/logout, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/forgotten, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/invoice, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/order, roles: ROLE_NORMAL_ADMIN }
+        - { path: ^/goodsPassport, roles:ROLE_NORMAL_ADMIN}
+        - { path: ^/store, roles: ROLE_NORMAL_ADMIN }
+        - { path: ^/user, roles: ROLE_NORMAL_ADMIN }
+        - { path: ^/backend, roles: ROLE_NORMAL_ADMIN }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
     providers:
